--- a/src/templates/questions/single.html
+++ b/src/templates/questions/single.html
@@ -5,11 +5,14 @@
 
 <form method ='POST' action=''>{%csrf_token %}
 <h2>{{instance.text}}</h2>
+{{user_answer.user}}
 <input type='hidden' name='question_id' value ='{{instance.id}}'/>
 
 <h4> Your Answer</h4>
 {% for ans in instance.answer_set.all %}
-<input type ='radio' name='answer_id' value='{{ans.id}}' />{{ans.text}} 
+<input type ='radio' name='answer_id' value='{{ans.id}}' 
+{% if user_answer.my_answer.id == ans.id %}
+checked=checked {% endif %}/>{{ans.text}} 
 <br/>
 {% endfor %}
 <br/>
@@ -17,15 +20,19 @@ Importance : {{form.importance_level}}
 <h4> Your Coworker's Ideal Answer</h4>
 
 {% for ans in instance.answer_set.all %}
-<input type ='radio' name='coworker_answer_id' value='{{ans.id}}' />{{ans.text}} 
+<input type ='radio' name='their_answer_id' value='{{ans.id}}'
+{% if user_answer.their_answer.id == ans.id %}
+checked=checked {% endif %} />{{ans.text}} 
 <br/>
 
 {% endfor %}
-<input type ='radio' name='coworker_answer_id' value='-1' />Doesnt Matter
+<input type ='radio' name='their_answer_id' value='-1' 
+{% if not user_answer.their_answer %} checked=checked {% endif %}
+/>Hold No Importance
 
 <br/>
 
-Importance: {{form.coworker_importance_level}}<br/><br/>
+Importance: {{form.their_importance_level}}<br/><br/>
 <input type='submit' value ='save and continue'/>
 
 </form>
